--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,7 +56,7 @@ layout: default
                 </ul>
 
                 <!-- Duoshuo Share start -->
-                <style>
+                 <!--<style>
                     .ds-share{
                         text-align: right;
                     }
@@ -68,7 +68,7 @@ layout: default
                     }
                 </style>
 
-                <!--<div class="ds-share"
+               <div class="ds-share"
                     data-thread-key="{{page.id}}" data-title="{{page.title}}"
                     data-images="{{ site.url }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}"
                     data-content="{{ content | strip_html | truncate:80 }} | Microdust:Azeril's blog"
